# ofxstatement

./: .gitignore  .travis.yml  CHANGES.rst  MANIFEST.in  Makefile  Pipfile  README.rst  README.txt  bootstrap.py  buildout.cfg  pyproject.toml  pytest.ini  setup.cfg  setup.py  test_requirements.txt
.github/: dependabot.yml
.github/workflows/: test.yml
doc/ofx_sample_files/: ofx_spec201_invest_transactions_example.xml  ofx_spec201_stmtrs_example.xml
src/ofxstatement/: __init__.py  configuration.py  downloader.py  exceptions.py  ofx.py  parser.py  plugin.py  statement.py  tool.py  ui.py
src/ofxstatement/plugins/: README.txt  __init__.py  dab.py  danske.py  dkb_cc.py  dnb.py  lbbamazon.py  litas_esis.py  maxibps.py  swedbank.py
src/ofxstatement/tests/: test_configuration.py  test_dab.py  test_danske.py  test_dkbcc.py  test_dnb.py  test_lbbamazon.py  test_litas_esis.py  test_maxibps.py  test_ofx.py  test_ofx_invest.py  test_parser.py  test_plugin.py  test_sample.py  test_statement.py  test_swedbank.py  test_tool.py
src/ofxstatement/tests/samples/: config.ini  dab.csv  danske.csv  dkbcc.csv  dnb.csv  lbbamazon.csv  maxibps.txt  swedbank.csv
