[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ofxstatement"
version = "0.9.2"
authors = [
  { name="Andrey Lebedev", email="andrey@lebedev.lt" },
]
description = "Tool to convert proprietary bank statement to OFX format, suitable for importing to GnuCash"
readme = "README.rst"
requires-python = ">=3.9"
license = { file="LICENSE.txt" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Natural Language :: English",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Utilities",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
keywords = ["ofx", "banking", "statement"]
dependencies = [
    "platformdirs",
    "importlib_metadata>=3.8;python_version<'3.10'",
    "zipp;python_version<'3.10'"
]

[project.urls]
Homepage = "https://github.com/kedder/ofxstatement"

[project.scripts]
ofxstatement = "ofxstatement.tool:run"

[tool.setuptools]
packages = [
    "ofxstatement",
    "ofxstatement.plugins",
    "ofxstatement.tests",
    "ofxstatement.tests.samples",
]

[tool.setuptools.package-data]
ofxstatement = ["tests/samples"]
