[metadata]
name = ofxstatement
version = 0.9.2.dev0
description = Tool to convert proprietary bank statement to OFX format, suitable for importing to GnuCash
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/kedder/ofxstatement
author = Andrey Lebedev
author_email = andrey@lebedev.lt
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Natural Language :: English
    Topic :: Office/Business :: Financial :: Accounting
    Topic :: Utilities
    Environment :: Console
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
keywords = ofx banking statement
project_urls =
   
[options]
package_dir = =src
packages = find:
namespace_packages =
    ofxstatement
    ofxstatement.plugins
python_requires = >=3.8, <4
install_requires =
    appdirs>=1.3.0
    importlib_metadata>=3.8;python_version<'3.10'
data_files =
   
[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ofxstatement=ofxstatement.tool:run 

[options.extras_require]
dev =
    black
    mypy
test =
    mock
    pytest
    pytest-coverage

[mypy]
ignore_missing_imports = True

[pycodestyle]
max-line-length=88
